--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
 		<p>Stop Selected: <span id="stop-choice"></span></p>
 	</form>
 	<!-- <p>Results: <span id="results"></span></p> -->
-	<table id="results-table">
-		<thead id="thead">
-			<tr>
-				<th>Bus #</th>
-				<th>Stop Time</th>
-				<th>Wait Time</th>
-			</tr>
-		</thead>
-		<tbody id="tableBody">
-		</tbody>
-	</table>
+	<div class="table-container">
+		<table id="results-table">
+			<thead id="thead">
+				<tr>
+					<th>Bus #</th>
+					<th>Stop Time</th>
+					<th>Wait Time</th>
+				</tr>
+			</thead>
+			<tbody id="tableBody">
+			</tbody>
+		</table>
+	</div>
   	<script type="text/javascript" src="time_stop_data.js"></script>
   	<script type="text/javascript" src="script.js"></script>
 </body>
