Centered everything and added colors

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bus Time Stops</title>
+	<title>NDSU Bus Times</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<h2>Current Time is <span id="date-time"></span></h2>
 	<h3>Select Bus Stop</h3>
-	<form class="table-container">
+	<form class="drop-container">
 		<select class = "dropbtn" id = "stopList" onchange = "dropSelect()">
 			<option value="stop_1">NDSU Transit Hub</option>
 			<option value="stop_11">Niskanen</option>
 			<option value="stop_5">University Village</option>
-			<option value="stop_3">Klai Hall</option>
-			<option value="stop_4">Barry Hall</option>
-			<option value="stop_13">Renaissance Hall</option>
 			<option value="stop_6">SHAC</option>
+			<option value="stop_4">Barry Hall</option>
+			<option value="stop_3">Klai Hall</option>
+			<option value="stop_13">Renaissance Hall</option>
 			<option value="stop_7">Centennial Blvd</option>
 			<option value="stop_8">Reed/Johnson Hall</option>
 			<option value="stop_9">Fargodome East</option>
