Live update time

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			</tbody>
 		</table>
 	</div>
+	<p id="message-box"></p>
   	<script type="text/javascript" src="time_stop_data.js"></script>
   	<script type="text/javascript" src="script.js"></script>
 </body>
