Cleaned up variable names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2>Current Time is <span id="date-time"></span></h2>
 	<h3>Select Bus Stop</h3>
 	<form class="drop-container">
-		<select class = "dropbtn" id = "stopList" onchange = "dropSelect()">
+		<select class = "dropbtn" id = "stopList" onchange = "updateStopTimes()">
 			<option value="stop_1">NDSU Transit Hub</option>
 			<option value="stop_11">Niskanen</option>
 			<option value="stop_5">University Village</option>
