--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h2>Current Time is <span id="date-time"></span></h2>
+	<h2>Current Time: <span id="date-time"></span></h2>
 	<h3>Select Bus Stop</h3>
 	<form class="drop-container">
 		<select class = "dropbtn" id = "stopList" onchange = "updateStopTimes()">
