New next stop field and refined data calculations.

--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
 	<form class="drop-container">
 		<select class = "dropbtn" id = "stopList" onchange = "updateStopTimes()">
 			<option value="stop_1">NDSU Transit Hub</option>
-			<option value="stop_11">Niskanen</option>
-			<option value="stop_5">University Village</option>
-			<option value="stop_6">SHAC</option>
-			<option value="stop_4">Barry Hall</option>
-			<option value="stop_3">Klai Hall</option>
-			<option value="stop_13">Renaissance Hall</option>
-			<option value="stop_7">Centennial Blvd</option>
-			<option value="stop_8">Reed/Johnson Hall</option>
-			<option value="stop_9">Fargodome East</option>
-			<option value="stop_10">Casey's</option>
-			<option value="stop_2">Family Fare</option>
-			<option value="stop_14">GTC</option>
+			<option value="stop_6">University Village</option>
+			<option value="stop_7">Niskanen</option>
+			<option value="stop_8">NDSU High Rises</option>
+			<option value="stop_2">Barry Hall</option>
+			<option value="stop_3">Rennaisance Hall</option>
+			<option value="stop_10">Reed/Johnson Hall</option>
+			<option value="stop_4">Minard East</option>
+			<option value="stop_5">Minard West</option>
+			<option value="stop_11">Klai Hall</option>
+			<option value="stop_9">Wellness Center</option>
+			<option value="stop_12">SHAC</option>
+			<option value="stop_13">Centennial Blvd</option>
+			<option value="stop_14">Fargodome East</option>
+			<option value="stop_15">Fargodome West</option>
+			<option value="stop_16">GTC</option>
+			<option value="stop_17">Casey's</option>
+			<option value="stop_18">Family Fare</option>
+			<option value="stop_19">Dakota Drive</option>
 		</select>
 	</form>
 	<div class="table-container">
@@ -33,6 +39,7 @@
 					<th>Bus #</th>
 					<th>Stop Time</th>
 					<th>Wait Time</th>
+					<th>Next Stop</th>
 				</tr>
 			</thead>
 			<tbody id="tableBody">
@@ -40,7 +47,9 @@
 		</table>
 	</div>
 	<p id="message-box"></p>
-  	<script type="text/javascript" src="time_stop_data.js"></script>
-  	<script type="text/javascript" src="script.js"></script>
+  	<!-- <script type="text/javascript" src="time_stop_data.js"></script> -->
+  	<!-- <script type="text/javascript" src="script.js"></script> -->
+  	<script type="text/javascript" src="new_stop_data.js"></script>
+  	<script type="text/javascript" src="new_script.js"></script>
 </body>
 </html>
