Updated Stop Data for Reed/Johnson & Minard East

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 		</table>
 	</div>
 	<p id="message-box"></p>
-  	<!-- <script type="text/javascript" src="time_stop_data.js"></script> -->
-  	<!-- <script type="text/javascript" src="script.js"></script> -->
-  	<script type="text/javascript" src="new_stop_data.js"></script>
+  	<script type="text/javascript" src="stop_data_12_07_22.js"></script>
   	<script type="text/javascript" src="new_script.js"></script>
 </body>
 </html>
