Deleted old time files, updated next_stop format, +30min increments for route 13

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 		<p id="message-box"></p>
 	</div>
   	<script type="text/javascript" src="stop_data_01_18_23.js"></script>
-  	<script type="text/javascript" src="new_script.js"></script>
+  	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
